syntax = "proto3";

package delivertrack.common;

option go_package = "github.com/Keneke-Einar/delivertrack/proto/common";

// Common types shared across services

message Location {
  double latitude = 1;
  double longitude = 2;
  string address = 3;
  string city = 4;
  string state = 5;
  string postal_code = 6;
  string country = 7;
}

message TimeRange {
  int64 start_time = 1; // Unix timestamp
  int64 end_time = 2;   // Unix timestamp
}

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}

message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 1;
  STATUS_IN_PROGRESS = 2;
  STATUS_COMPLETED = 3;
  STATUS_FAILED = 4;
  STATUS_CANCELLED = 5;
}
